<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_search"
        android:actionLayout="@layout/activity_search_result"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="collapseActionView" />

    <!--<item-->
        <!--android:id="@+id/menu_suggest_new"-->
        <!--android:icon="@drawable/ic_plus"-->
        <!--android:title="@string/suggest_new_place"-->
        <!--app:showAsAction="collapseActionView" />-->

    <item
        android:id="@+id/menu_feedback"
        android:icon="@drawable/ic_feedback"
        android:title="@string/feedback"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/action_night"
        android:title="@string/menu_night_mode"
        app:showAsAction="never">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_night_mode_system"
                    android:title="@string/menu_night_mode_system" />
                <item
                    android:id="@+id/menu_night_mode_day"
                    android:title="@string/menu_night_mode_day" />
                <item
                    android:id="@+id/menu_night_mode_night"
                    android:title="@string/menu_night_mode_night" />
                <item
                    android:id="@+id/menu_night_mode_auto"
                    android:title="@string/menu_night_mode_auto" />
            </group>
        </menu>
    </item>

</menu>