<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightGrey"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:paddingEnd="@dimen/margin_8dp"
    android:paddingStart="@dimen/margin_8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/recommend_img_toggle_search"
            android:text="@string/search" />

        <ImageView
            android:id="@+id/recommend_img_toggle_search"
            android:layout_width="@dimen/margin_24dp"
            android:layout_height="@dimen/margin_24dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:alpha="0.5"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_arrow_up"
            android:tint="@color/colorBlack" />

    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/recommend_card_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/margin_2dp"
        app:cardElevation="@dimen/margin_2dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="@dimen/margin_12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_12dp"
                android:visibility="gone"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_calendar" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_12dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/day_off" />

                    <EditText
                        android:id="@+id/recommend_edt_day_off"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/free_day"
                        android:inputType="none" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_12dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_category" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_12dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/category" />

                    <EditText
                        android:id="@+id/recommend_edt_category"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/all"
                        android:inputType="none"
                        android:lineSpacingMultiplier="1.5" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_12dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_people" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_12dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/go_with" />

                    <EditText
                        android:id="@+id/recommend_edt_people"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/friends"
                        android:inputType="none" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/recommend_btn_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="60dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="@dimen/margin_12dp"
                android:gravity="center"
                android:text="@string/show"
                android:padding="@dimen/margin_8dp"
                android:theme="?attr/primaryButtonTheme" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <RelativeLayout
        android:id="@+id/recommend_text_result_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8dp">

        <TextView
            android:id="@+id/recommend_txt_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result" />

        <ImageView
            android:id="@+id/recommend_img_toggle_result"
            android:layout_width="@dimen/margin_24dp"
            android:layout_height="@dimen/margin_24dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:alpha="0.5"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_arrow_up"
            android:tint="@color/colorBlack" />

    </RelativeLayout>

    <include layout="@layout/progress_bar" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recommend_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.v7.widget.RecyclerView>

    <TextView
        android:id="@+id/recommend_txt_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/no_result"
        android:visibility="gone" />

</LinearLayout>