<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightGrey"
    android:orientation="vertical"
    tools:context=".activities.SettingsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="@dimen/margin_12dp"
        android:layout_marginLeft="@dimen/margin_24dp"
        android:layout_marginRight="@dimen/margin_24dp"
        android:layout_marginTop="@dimen/margin_12dp">

        <ImageView
            android:id="@+id/settings_image_language"
            android:layout_width="@dimen/margin_24dp"
            android:layout_height="@dimen/margin_24dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/translate" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margin_12dp"
            android:layout_marginStart="@dimen/margin_12dp"
            android:layout_toEndOf="@id/settings_image_language"
            android:layout_toLeftOf="@id/settings_spinner_language"
            android:layout_toRightOf="@id/settings_image_language"
            android:layout_toStartOf="@id/settings_spinner_language"
            android:text="@string/language" />

        <ToggleButton
            android:id="@+id/settings_spinner_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textOff="@string/english"
            android:textOn="@string/khmer" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:background="@color/black_overlay" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="@dimen/margin_12dp"
        android:layout_marginLeft="@dimen/margin_24dp"
        android:layout_marginRight="@dimen/margin_24dp"
        android:layout_marginTop="@dimen/margin_12dp">

        <ImageView
            android:id="@+id/settings_image_night_mode"
            android:layout_width="@dimen/margin_24dp"
            android:layout_height="@dimen/margin_24dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_moon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margin_12dp"
            android:layout_marginStart="@dimen/margin_12dp"
            android:layout_toEndOf="@id/settings_image_night_mode"
            android:layout_toLeftOf="@id/settings_toggle_night_mode"
            android:layout_toRightOf="@id/settings_image_night_mode"
            android:layout_toStartOf="@id/settings_toggle_night_mode"
            android:text="@string/night_mode" />

        <ToggleButton
            android:id="@+id/settings_toggle_night_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:background="@color/black_overlay" />

</LinearLayout>