<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_in_scroll_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightGrey"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:id="@+id/sign_in_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_24dp"
            android:layout_marginStart="@dimen/margin_24dp"
            android:layout_marginTop="60dp"
            android:orientation="vertical">

            <include layout="@layout/progress_bar" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/margin_4dp"
                app:cardElevation="@dimen/margin_4dp"
                app:cardUseCompatPadding="true"
                app:contentPadding="@dimen/margin_12dp">

                <LinearLayout
                    android:id="@+id/sign_in_form_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/margin_12dp">

                    <TextView
                        android:id="@+id/sign_in_txt_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/sign_in"
                        android:textAllCaps="true"
                        android:textColor="@color/colorBlack"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/sign_in_txt_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_24dp"
                        android:text="@string/email"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/sign_in_edt_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/comfortaa"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress" />

                    <TextView
                        android:id="@+id/sign_in_txt_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_12dp"
                        android:text="@string/password"
                        android:textSize="12sp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/sign_in_edt_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/comfortaa"
                            android:hint="@string/password"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword" />

                        <ImageView
                            android:id="@+id/sign_in_img_eye"
                            android:layout_width="@dimen/margin_24dp"
                            android:layout_height="@dimen/margin_24dp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/ic_eye"
                            android:tint="@color/colorPrimary" />

                    </RelativeLayout>

                    <CheckBox
                        android:id="@+id/sign_in_cbx_remember_me"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/remember_me" />

                    <Button
                        android:id="@+id/sign_in_btn_sign_in"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/margin_24dp"
                        android:backgroundTint="@color/colorPrimary"
                        android:text="@string/sign_in"
                        android:textColor="@color/colorWhite"
                        tools:targetApi="lollipop" />

                    <TextView
                        android:id="@+id/sign_in_txt_create_account"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/margin_24dp"
                        android:fontFamily="@font/comfortaa"
                        android:text="@string/create_account"
                        android:textAllCaps="true"
                        android:textStyle="bold" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v4.widget.ContentLoadingProgressBar
                android:id="@+id/sign_in_progress_bar"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-12dp"
                android:indeterminate="true"
                android:visibility="gone" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>